force-app/main/default/objects/Teilnehmer__c/Teilnehmer__c.object-meta.xml
<CustomObject>
    <label>Teilnehmer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teilnehmer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>