force-app/main/default/objects/Teilnehmer__c/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <label>Adresse</label>
    <type>TextArea</type>
</CustomField>