force-app/main/default/objects/Teilnehmer__c/fields/Alter__c.field-meta.xml
<CustomField>
    <fullName>Alter__c</fullName>
    <formula>floor((today() -  Geburtsdatum__c )/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>