force-app/main/default/objects/Teilnehmer__c/fields/Anzahlungsbetrag__c.field-meta.xml
<CustomField>
    <fullName>Anzahlungsbetrag__c</fullName>
    <label>Anzahlungsbetrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>