force-app/main/default/objects/Teilnehmer__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <defaultValue>&#39;Nicht erforderlich&#39;</defaultValue>
    <label>Einverständniserklärung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nicht erforderlich</fullName>
            </value>
            <value>
                <fullName>Erforderlich</fullName>
            </value>
            <value>
                <fullName>Liegt vor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>