force-app/main/default/objects/Teilnehmer__c/fields/Festnetz__c.field-meta.xml
<CustomField>
    <fullName>Festnetz__c</fullName>
    <label>Festnetz</label>
    <type>Phone</type>
</CustomField>