force-app/main/default/objects/Teilnehmer__c/fields/Geburtsdatum__c.field-meta.xml
<CustomField>
    <fullName>Geburtsdatum__c</fullName>
    <label>Geburtsdatum</label>
    <type>Date</type>
</CustomField>