force-app/main/default/objects/Teilnehmer__c/fields/Istkosten_Gesamt__c.field-meta.xml
<CustomField>
    <fullName>Istkosten_Gesamt__c</fullName>
    <label>Istkosten Gesamt</label>
    <summarizedField>OP_Teilnehmer__c.Istkosten_Gesamt__c</summarizedField>
    <summaryForeignKey>OP_Teilnehmer__c.Teilnehmer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>