force-app/main/default/objects/Teilnehmer__c/fields/Kommentar__c.field-meta.xml
<CustomField>
    <fullName>Kommentar__c</fullName>
    <label>Kommentar</label>
    <type>TextArea</type>
</CustomField>