force-app/main/default/objects/Teilnehmer__c/fields/Kreditkarte__c.field-meta.xml
<CustomField>
    <fullName>Kreditkarte__c</fullName>
    <label>Kreditkarte</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>