force-app/main/default/objects/Teilnehmer__c/fields/Kreditkarte_Ablauf__c.field-meta.xml
<CustomField>
    <fullName>Kreditkarte_Ablauf__c</fullName>
    <label>Kreditkarte Ablauf</label>
    <length>7</length>
    <type>Text</type>
</CustomField>