force-app/main/default/objects/Teilnehmer__c/fields/Kreditkarte_Typ__c.field-meta.xml
<CustomField>
    <fullName>Kreditkarte_Typ__c</fullName>
    <label>Kreditkarte Typ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>