force-app/main/default/objects/Teilnehmer__c/fields/M_W__c.field-meta.xml
<CustomField>
    <fullName>M_W__c</fullName>
    <label>M/W</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>