force-app/main/default/objects/Teilnehmer__c/fields/Notfall_Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Notfall_Kontakt__c</fullName>
    <label>Notfall-Kontakt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>