force-app/main/default/objects/Teilnehmer__c/fields/Plankosten_Gesamt__c.field-meta.xml
<CustomField>
    <fullName>Plankosten_Gesamt__c</fullName>
    <label>Plankosten Gesamt</label>
    <summarizedField>OP_Teilnehmer__c.Plankosten_Gesamt__c</summarizedField>
    <summaryForeignKey>OP_Teilnehmer__c.Teilnehmer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>