force-app/main/default/objects/Teilnehmer__c/fields/PW__c.field-meta.xml
<CustomField>
    <fullName>PW__c</fullName>
    <label>PW</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>