force-app/main/default/objects/Teilnehmer__c/fields/Reise__c.field-meta.xml
<CustomField>
    <fullName>Reise__c</fullName>
    <label>Reise</label>
    <referenceTo>Reise__c</referenceTo>
    <relationshipLabel>Teilnehmer</relationshipLabel>
    <relationshipName>Teilnehmer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>