force-app/main/default/objects/Teilnehmer__c/fields/Rueckzahlbetrag__c.field-meta.xml
<CustomField>
    <fullName>Rueckzahlbetrag__c</fullName>
    <label>Rückzahlbetrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>