force-app/main/default/objects/Teilnehmer__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>Istkosten_Gesamt__c -  Zahlungen_Gesamt__c +  Vorschuss_gesamt__c - Anzahlungsbetrag__c +  Rueckzahlbetrag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>