force-app/main/default/objects/Teilnehmer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&#39;Interesse&#39;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interesse</fullName>
                <default>true</default>
                <label>Interesse</label>
            </value>
            <value>
                <fullName>Bestätigt</fullName>
            </value>
            <value>
                <fullName>Bezahlt</fullName>
            </value>
            <value>
                <fullName>Teilgenommen</fullName>
            </value>
            <value>
                <fullName>Rückzahlung</fullName>
            </value>
            <value>
                <fullName>Sonstig</fullName>
            </value>
            <value>
                <fullName>Offen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>