force-app/main/default/objects/Teilnehmer__c/fields/Telefon_2__c.field-meta.xml
<CustomField>
    <fullName>Telefon_2__c</fullName>
    <label>Telefon 2</label>
    <type>Phone</type>
</CustomField>