force-app/main/default/objects/Teilnehmer__c/fields/TN_automatisch_zuordnen__c.field-meta.xml
<CustomField>
    <fullName>TN_automatisch_zuordnen__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TN automatisch zuordnen</label>
    <type>Checkbox</type>
</CustomField>