force-app/main/default/objects/Teilnehmer__c/fields/Verein__c.field-meta.xml
<CustomField>
    <fullName>Verein__c</fullName>
    <defaultValue>&#39;Tristars Markkleeberg&#39;</defaultValue>
    <label>Verein</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>