force-app/main/default/objects/Teilnehmer__c/fields/Vorbereitungs_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Vorbereitungs_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vorbereitungs-Meeting</label>
    <type>Checkbox</type>
</CustomField>