force-app/main/default/objects/Teilnehmer__c/fields/Vorschuss_gesamt__c.field-meta.xml
<CustomField>
    <fullName>Vorschuss_gesamt__c</fullName>
    <label>Vorschuss gesamt</label>
    <summarizedField>Zahlung__c.Vorschuss__c</summarizedField>
    <summaryForeignKey>Zahlung__c.Teilnehmer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>