force-app/main/default/objects/Teilnehmer__c/fields/Zahlungen_Gesamt__c.field-meta.xml
<CustomField>
    <fullName>Zahlungen_Gesamt__c</fullName>
    <label>Zahlungen Gesamt</label>
    <summarizedField>Zahlung__c.Zahlbetrag__c</summarizedField>
    <summaryForeignKey>Zahlung__c.Teilnehmer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>