force-app/main/default/objects/Teilnehmer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Adresse__c</columns>
    <columns>Email__c</columns>
    <columns>M_W__c</columns>
    <columns>Notfall_Kontakt__c</columns>
    <columns>Anzahlungsbetrag__c</columns>
    <columns>Istkosten_Gesamt__c</columns>
    <columns>Zahlungen_Gesamt__c</columns>
    <columns>Vorschuss_gesamt__c</columns>
    <columns>Rueckzahlbetrag__c</columns>
    <columns>Saldo__c</columns>
    <columns>Alter__c</columns>
    <columns>Approval__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>