force-app/main/default/objects/Teilnehmer__c/listViews/Bestaetigt.listView-meta.xml
<ListView>
    <fullName>Bestaetigt</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>M_W__c</columns>
    <columns>Notfall_Kontakt__c</columns>
    <columns>Anzahlungsbetrag__c</columns>
    <columns>Istkosten_Gesamt__c</columns>
    <columns>Zahlungen_Gesamt__c</columns>
    <columns>Vorschuss_gesamt__c</columns>
    <columns>Rueckzahlbetrag__c</columns>
    <columns>Saldo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Bestätigt,Teilgenommen,Rückzahlung</value>
    </filters>
    <label>Bestätigt</label>
</ListView>